# amaranth-cv32e40p

./: .gitignore  .gitmodules  LICENSE.txt  convert_dm_wrap_sv2v.sh  pyproject.toml
.github/workflows/: main.yaml
amaranth_cv32e40p/: cv32e40p.py
amaranth_cv32e40p/verilog/: dm_wrap_conv_sv2v.v
harness/: dm_wrap.sv
