[tool.poetry]
name = "amaranth-cv32e40p"
version = "0.0.0"
description = "CV32E40P and Amaranth Integration"
authors = ["Myrtle Shah <myrtle.shah@chipflow.io>"]
license = "MIT-Modern-Variant"
readme = "README.md"
packages = [{include = "amaranth_cv32e40p"}]
include = ["*.v", "*.yaml"]

[tool.poetry.dependencies]
python = "^3.7"
amaranth = { git = "https://github.com/amaranth-lang/amaranth" }

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

