[project]
name = "amaranth-cv32e40p"
dynamic = ["version"]
description = "CV32E40P and Amaranth Integration"
authors = [
    {name = "Myrtle Shah", email = "gatecat@chipflow.io" },
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "amaranth>=0.5,<0.7",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["**/*.py", "**/*.v", "**/*.yaml"]

# Development workflow configuration

[tool.pyright]
diagnosticMode=false
typeCheckingMode = "off"
reportInvalidTypeForm = false
reportMissingImports = false
reportUnboundVariable = false

[tool.ruff.lint]
ignore = ['F403', 'F405', 'F841', 'F541']

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=amaranth-orchard cov-report=term"
test-cov-html.cmd = "pytest --cov=amaranth-orchard --cov-report=html"
# test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
test-docs.cmd = "true"
lint.cmd = "ruff check"
#docs.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
doc.cmd = "true"


[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=0.6",
]
